# grizzly-gameservers

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  clippy.toml  deny.toml  justfile
crates/bot/: Cargo.toml  build.rs
crates/bot/prompts/defer/: DeferredBatch.md  OccupancyEmpty.md  OccupancyIdle.md  OccupancyNotFound.md  OccupancyNotManaged.md  OccupancyTimedOut.md  StartupCrashed.md  StartupNotFound.md  StartupNotManaged.md  StartupReady.md  StartupStopped.md  StartupTimedOut.md  StartupUnchecked.md
crates/bot/prompts/discord/: DiscordAdminConsole.md  DiscordAdminDestructive.md  DiscordGamesLine.md  DiscordManagerLifecycle.md  DiscordManagerOccupancy.md  DiscordManagerRestriction.md  DiscordManagerScheduling.md  DiscordManagerTuning.md  DiscordMemoryHabit.md  DiscordPersona.md  DiscordReadOnlyRestriction.md  DiscordReporting.md  DiscordSavedNotes.md
crates/bot/prompts/ingame/: IngameGamesLine.md  IngameNoQuestion.md  IngamePersona.md  IngameQuestion.md
crates/bot/prompts/results/archive_server/: ArchiveDone.md  ArchiveFailed.md
crates/bot/prompts/results/backup_server/: BackupDone.md  BackupNotRunning.md  BackupUnreachable.md
crates/bot/prompts/results/browse_files/: BrowseEmpty.md  BrowseListing.md
crates/bot/prompts/results/create_server/: CreateBadName.md  CreateCreated.md  CreateNameTaken.md  CreatePortsExhausted.md  CreateUnknownGame.md
crates/bot/prompts/results/destroy_server/: DestroyDeleted.md  DestroyNoConfirmChannel.md
crates/bot/prompts/results/edit_file/: EditAmbiguous.md  EditNoMatch.md  EditTooLarge.md  EditUnchanged.md  FileEdited.md
crates/bot/prompts/results/forget/: ForgetFailed.md  ForgetForgot.md  ForgetMemoryOffline.md  ForgetNoSuchFact.md
crates/bot/prompts/results/ingame/: IngameLookupOnly.md  IngameServerUnclear.md
crates/bot/prompts/results/list_archives/: ArchiveListEmpty.md  ArchiveListHeader.md
crates/bot/prompts/results/list_backups/: BackupListEmpty.md  BackupListHeader.md
crates/bot/prompts/results/read_file/: FileContents.md  FileTruncatedNote.md
crates/bot/prompts/results/read_logs/: LogsEmpty.md  LogsOutput.md
crates/bot/prompts/results/recover_server/: RecoverCrashed.md  RecoverFailed.md  RecoverNameInUse.md  RecoverNoArchiveHere.md  RecoverNoSuchArchive.md  RecoverPortsExhausted.md  RecoverReady.md  RecoverStopped.md  RecoverTimedOut.md  RecoverUnknownGame.md
crates/bot/prompts/results/remember/: RememberBadScope.md  RememberMemoryOffline.md  RememberNeedFact.md  RememberSaveFailed.md  RememberSaved.md
crates/bot/prompts/results/restore_file/: RestoreFileDone.md
crates/bot/prompts/results/restore_server/: RestoreServerCrashed.md  RestoreServerFailed.md  RestoreServerNoBackups.md  RestoreServerReady.md  RestoreServerStopped.md  RestoreServerTimedOut.md
crates/bot/prompts/results/run_when/: RunWhenCantWatchEmpty.md  RunWhenQueueUnavailable.md  RunWhenScheduleRejected.md  RunWhenScheduled.md
crates/bot/prompts/results/send_command/: CommandNoOutput.md  CommandOutput.md
crates/bot/prompts/results/server_status/: OccupancyKnown.md  OccupancyReasonNoConsole.md  OccupancyReasonNoCount.md  OccupancyReasonNotUp.md  OccupancyReasonUnread.md  OccupancyUnknown.md
crates/bot/prompts/results/shared/: AbortCancelled.md  AbortTimedOut.md  ArchivesUnavailable.md  BackupsNotConfigured.md  BadToolArguments.md  ClusterUnreachable.md  ConfirmAborted.md  ConfirmNoChannel.md  NegativeLineCount.md  NonAdminRefusal.md  NonManagerRefusal.md  NotManaged.md  ServerListEmpty.md  ServerNotFound.md  ServerSummaryLine.md  UnknownTool.md
crates/bot/prompts/results/shutdown_server/: ShutdownStopped.md
crates/bot/prompts/results/start_server/: ColdStartStarting.md  ColdStartUnknownGame.md
crates/bot/prompts/results/write_file/: FileWritten.md
crates/bot/prompts/tools/discord/: ArchiveServer.md  BackupServer.md  BrowseFiles.md  CreateServer.md  DestroyServer.md  EditFile.md  Forget.md  ListArchives.md  ListBackups.md  ListServers.md  ReadFile.md  ReadLogs.md  RecoverServer.md  Remember.md  RestartServer.md  RestoreFile.md  RestoreServer.md  RunWhen.md  SendCommand.md  ServerStatus.md  ShutdownServer.md  StartServer.md  StopServer.md  WriteFile.md
crates/bot/prompts/tools/ingame/: IngameListServers.md  IngameServerStatus.md
crates/bot/prompts/tools/params/: NameParams.md  PathParams.md
crates/bot/src/: config.rs  domain.rs  kv.rs  lib.rs  memory.rs  notify.rs  prompts.rs  store.rs
crates/bot/src/agent/: llm.rs  mod.rs  render.rs  session.rs  store.rs  tools.rs
crates/bot/src/agent/tests/: llm.rs  render.rs  session.rs  store.rs  tools.rs
crates/bot/src/agones/: client.rs  instance.rs  labels.rs  mod.rs  naming.rs  ports.rs  provision.rs  scope.rs  supervisor.rs  supervisor_fs.rs  types.rs
crates/bot/src/agones/tests/: catalog.rs  instance.rs  labels.rs  naming.rs  ports.rs  scope.rs  supervisor.rs  supervisor_fs.rs  types.rs
crates/bot/src/backup/: manifest.rs  mod.rs  orchestrate.rs  s3.rs  store.rs
crates/bot/src/backup/tests/: manifest.rs
crates/bot/src/defer/: condition.rs  mod.rs  task.rs  watcher.rs
crates/bot/src/defer/tests/: condition.rs
crates/bot/src/discord/: auth.rs  chunking.rs  commands.rs  mod.rs  render.rs
crates/bot/src/ingame/: agent.rs  mod.rs
crates/bot/src/tests/: config.rs  domain.rs  kv.rs  memory.rs  notify.rs  store.rs
crates/bot/tests/: prompt_annotations.rs
crates/prompt-lib/: Cargo.toml
crates/prompt-lib/src/: error.rs  lib.rs  parse.rs  spec.rs  validate.rs  verify.rs
crates/prompt-lib/src/codegen/: ident.rs  mod.rs  model.rs  parse.rs  validate.rs
crates/prompt-lib/src/tests/: ident.rs  validate.rs  verify.rs
crates/supervisor/: Cargo.toml
crates/supervisor/src/: archive.rs  autoupdate.rs  chat_watcher.rs  config.rs  control.rs  fs.rs  lib.rs  logs.rs  main.rs  palworld.rs  process.rs  rcon.rs  readiness.rs  runner.rs  sdk.rs  state.rs
crates/supervisor/src/tests/: archive.rs  autoupdate.rs  chat_watcher.rs  config.rs  control.rs  fs.rs  logs.rs  palworld.rs  process.rs  rcon.rs  readiness.rs  sdk.rs  state.rs
games/: README.md  (+1 more)
(+165 files in other folders)
