[package]
name = "grizzly-gameservers"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[build-dependencies]
# Codegen face: build.rs calls emit() to compile prompts/ into $OUT_DIR/prompts.rs.
grizzly-prompt-lib = { path = "../prompt-lib", version = "0.1.0", features = ["codegen"] }

[dependencies]
anyhow = "1.0.103"
dotenvy = "0.15.7"
grizzly-control-api = { path = "../control-api", version = "0.1.0" }
# Runtime face: the ToolSpec type generated tool specs assemble into. Referenced
# by generated code starting with the tool migration (Phase 5); declared now per
# the three-declaration contract (build-deps codegen / deps default / dev-deps verify).
grizzly-prompt-lib = { path = "../prompt-lib", version = "0.1.0" }
k8s-openapi = { version = "0.28.0", features = ["v1_33"] }
# Client for the in-pod supervisor control API. Default (native-tls) backend
# unifies with serenity's; the control calls themselves are plaintext http to
# pod IPs.
reqwest = { version = "0.12", features = ["json", "stream"] }
# axum serves the inbound agent endpoint game-pod supervisors POST in-game `@Gary`
# triggers to; matches the version the supervisor's control API already uses.
axum = "0.8.7"
# `ring` explicitly selects rustls' crypto provider so rustls 0.23 can install a
# process default; without it kube's rustls-tls enables no provider and the
# client panics at startup ("could not automatically determine the CryptoProvider").
kube = { version = "4.0.0", default-features = false, features = ["client", "derive", "rustls-tls", "ring"] }
poise = { version = "0.6.2", default-features = false, features = [
    "cache",
    "chrono",
    "handle_panics",
] }
# poise pulls serenity with no TLS backend (its default added rustls_backend,
# which we dropped above). Select native_tls_backend directly so serenity stays
# off the unmaintained rustls 0.22 -> rustls-webpki 0.102 chain
# (RUSTSEC-2026-0104, no published serenity yet bumps it). kube keeps its own
# current rustls 0.23 via its rustls-tls feature. Feature unification merges
# this with poise's serenity feature set.
serenity = { version = "0.12.5", default-features = false, features = ["native_tls_backend"] }
# Bot's durable state (the no-mention "home" channel registry) on foundation
# Postgres. No TLS feature: the connection is plain TCP to the LAN foundation
# store, so this stays off the rustls/native-tls chains the deps above curate.
# Runtime query API only (no compile-time `query!` macro), so CI needs no live DB.
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "postgres"] }
# Redis-wire client for the shared foundation kv-cache (Valkey) — backs Gary's
# deferred-task queue (run_when). ConnectionManager is an auto-reconnecting,
# cloneable, multiplexed connection, so no pool is needed at this scale. No TLS
# feature: the connection is plain TCP to the LAN foundation store, keeping this
# off the rustls/native-tls chains the deps above curate.
redis = { version = "1.3.0", features = ["tokio-comp", "connection-manager"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "fs",
    "time",
    "sync",
] }
# CancellationToken + TaskTracker back the graceful-shutdown drain: signal cancels
# the token (backup cycle, in-game server), then the tracker awaits in-flight work.
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
# Maintained drop-in fork of serde_yaml (which is unmaintained, RUSTSEC-2024-0370).
# Parses the per-game catalog templates in games/ into kube/k8s-openapi types.
serde_yaml_ng = "0.10.0"
rusty-s3 = "0.10.0"
url = "2.5.8"
jiff = "0.2.31"

[dev-dependencies]
# Verify face: the conventional annotations test (tests/prompt_annotations.rs)
# cross-checks each prompt file's used_by entries against the source tree.
grizzly-prompt-lib = { path = "../prompt-lib", version = "0.1.0", features = ["verify"] }

[lints]
workspace = true
