[package]
name = "grizzly-prompt-lib"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
# Maintained drop-in fork of serde_yaml (unmaintained, RUSTSEC-2024-0370); the
# same fork the bot crate uses for the game catalog. Parses prompt-file
# frontmatter. Its Mapping preserves insertion order, which keeps tool_schema
# parameter order stable for downstream codegen.
serde_yaml_ng = "0.10.0"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
