[package]
name = "grizzly-prompt-lib"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[features]
# Three dependency-isolated faces (design §Components). `default` is the lean
# runtime face — only the shared `ToolSpec` type generated code references, and
# nothing heavier. Consumers opt into the build-time and dev-time faces:
#   - build-dependency edge enables `codegen` (parser, validation, emitter)
#   - dev-dependency edge will enable `verify` (Phase 3)
# Because the pre-commit hook (the only lint/test enforcement) runs with default
# features, the canonical `test`/`lint` commands pass `--all-features` so the
# non-default faces are actually checked.
default = []
codegen = ["dep:serde", "dep:serde_yaml_ng"]
verify = []

[dependencies]
# Runtime face: `ToolSpec.parameters` is a `serde_json::Value`, and generated
# `spec()` bodies build that value through this crate's re-export. Pinned to the
# workspace-wide version so no duplicate serde_json is built.
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"], optional = true }
# Maintained drop-in fork of serde_yaml (unmaintained, RUSTSEC-2024-0370); the
# same fork the bot crate uses for the game catalog. Parses prompt-file
# frontmatter. Its Mapping preserves insertion order, which keeps tool_schema
# parameter order stable for downstream codegen.
serde_yaml_ng = { version = "0.10.0", optional = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
