[package]
name = "grizzly-supervisor"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[[bin]]
name = "grizzly-supervisor"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
grizzly-control-api = { path = "../control-api", version = "0.1.0" }
dotenvy = "0.15.7"
# axum drives the in-pod control API; hyper/tower are already in the workspace
# tree (via the bot's serenity), so this unifies rather than adds a new stack.
axum = "0.8.7"
# Plaintext HTTP only — the SDK is on loopback (127.0.0.1:9358), so no TLS
# backend is pulled in.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "net",
    "signal",
    "time",
    "sync",
    "io-util",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
# libc::kill delivers SIGTERM to the child for a graceful world-save; the only
# unsafe in the crate, scoped at the FFI boundary.
libc = "0.2"
# System CSPRNG to mint the ephemeral RCON password at pod startup — the password
# never touches git or a k8s object, so it is generated here and injected into
# the game child's environment. The RCON protocol itself is hand-rolled in
# src/rcon.rs (no client crate), keeping the dependency tree gate-clean.
getrandom = "0.4.3"

[dev-dependencies]
# Scratch directories for the path-scoped filesystem tests (fs.rs).
tempfile = "3"

[lints]
workspace = true
